--- a/Projeto Churrascometro/index.html
+++ b/Projeto Churrascometro/index.html
@@ -15,7 +15,7 @@
         <input id="adultos" name="adultos" type="number" placeholder="Adultos">
         <input id="criancas" name="criancas" type="number" placeholder="Crianças">
         <input id="duracao" name="duracao" type="number" placeholder="Duração">
-        <button onclick="Calcular()">Calcular</button>
+        <button onclick="calcular()">Calcular</button>
 
         <div id="resultado">
             
