--- a/Projeto Churrascometro/index.html
+++ b/Projeto Churrascometro/index.html
@@ -9,13 +9,13 @@
 
 
 </head>
-<body>
+<body class= corpo>
     <div class="conteiner">
-        <h1>Churrascometro</h1>
-        <input id="adultos" name="adultos" type="number" placeholder="Adultos">
-        <input id="criancas" name="criancas" type="number" placeholder="Crianças">
-        <input id="duracao" name="duracao" type="number" placeholder="Duração">
-        <button onclick="calcular()">Calcular</button>
+        <h1>Churrascômetro</h1>
+        <input id="adultos" name="adultos" type="number" placeholder="Digite o número de Adultos">
+        <input id="criancas" name="criancas" type="number" placeholder="Digite o número de Crianças">
+        <input id="duracao" name="duracao" type="number" placeholder="Digite a duração do churrasco">
+        <button id="botao" onclick="calcular()">Calcular</button>
 
         <div id="resultado">
             
